[package]
name = "github-notifications"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "^1"
serde_path_to_error = "0.1.5"
